--- a/DesignerRHN/DesignerRHN-war/web/EmplMvrs.xhtml
+++ b/DesignerRHN/DesignerRHN-war/web/EmplMvrs.xhtml
@@ -11,11 +11,11 @@
         <ui:composition template="/Template.xhtml">
             <ui:define name="body">                  
                 <h:form id="form"> 
-                    <p:panel  id="PanelTotal" header="Históricos Menores Valores de Retenciones" style=" font-size: 12px; position: absolute; width: 874px; height: 540px; text-align: left" >  
+                    <p:panel  id="PanelTotal" header="Históricos Menores Valores de Retenciones" style=" font-size: 13px; position: absolute; width: 874px; height: 540px; text-align: left" >  
                         <h:outputText style="position: absolute; top: 50px; height: 12px;position: absolute;color: red;font-weight: bold;text-align: right;width: 240px;left: 600px;" id="nombreEmpleado" value="#{controlEmplMvr.empleado.persona.primerapellido} #{controlEmplMvr.empleado.persona.segundoapellido} #{controlEmplMvr.empleado.persona.nombre}">
                         </h:outputText>
 
-                        <p:toolbar style="font-size: 12px; position: absolute; top: 50px; left: 20px;">  
+                        <p:toolbar style="font-size: 12px; position: absolute; top: 37px; left: 12px; height: 23px">  
                             <p:toolbarGroup align="left"> 
 
                                 <p:commandButton id="guardarRapido" value="" style="background-size: 100% 100%;background-image: url(Imagenes/guardar.jpg) ;background-repeat: no-repeat; width: 25px; height: 25px;" actionListener="#{controlEmplMvr.guardadoGeneral()}" process="@this" />
@@ -62,7 +62,7 @@
                         </p:toolbar> 
 
                         <fieldset style="position: absolute; left: 10px; top: 90px; font-size: 10px; width: 830px; height: 210px; border-radius: 10px; text-align: left">
-                            <legend style="font-size: 14px; color: blue"><strong>Menor Valor de Retencion</strong></legend>
+                            <legend style="font-size: 12px; color: blue"><strong>Menor Valor de Retencion</strong></legend>
                             <!-- TABLA EMPLVIGENCIALOCALIZACION -->
 
                             <p:dataTable id="datosMvrEmpleado" var="infoMvr" rowKey="#{infoMvr.secuencia}" rowIndexVar="indice" style="font-size: 10px; border: 1px;width: 830px"   
@@ -73,7 +73,7 @@
 
                                 <p:ajax event="filter" listener="#{controlEmplMvr.eventoFiltrar()}"/>
 
-                                <p:column headerText="Fecha Inicial" sortBy="#{infoMvr.fechainicial}" filterBy="#{infoMvr.fechainicial}" filterMatchMode="contains" 
+                                <p:column style="font-size: 11px" headerText="Fecha Inicial" sortBy="#{infoMvr.fechainicial}" filterBy="#{infoMvr.fechainicial}" filterMatchMode="contains" 
                                           width="72" id="mvrFechaInicial" filterStyle="display: none; visibility: hidden;"  >  
                                     <p:cellEditor>  
                                         <f:facet name="output">
@@ -97,7 +97,7 @@
                                     </f:facet>
                                 </p:column>
 
-                                <p:column headerText="Fecha Final" sortBy="#{infoMvr.fechafinal}" filterBy="#{infoMvr.fechafinal}" 
+                                <p:column style="font-size: 11px" headerText="Fecha Final" sortBy="#{infoMvr.fechafinal}" filterBy="#{infoMvr.fechafinal}" 
                                           filterMatchMode="contains"  width="72" id="mvrFechaFinal" filterStyle="display: none; visibility: hidden;"  >  
                                     <p:cellEditor>  
                                         <f:facet name="output">
@@ -121,7 +121,7 @@
                                     </f:facet>
                                 </p:column>
 
-                                <p:column headerText="Valor Mensual" sortBy="#{infoMvr.valor}" filterBy="#{infoMvr.valor}" filterMatchMode="contains" id="mvrValor" width="133" filterStyle="display: none; visibility: hidden;" >                                  
+                                <p:column style="font-size: 11px" headerText="Valor Mensual" sortBy="#{infoMvr.valor}" filterBy="#{infoMvr.valor}" filterMatchMode="contains" id="mvrValor" width="133" filterStyle="display: none; visibility: hidden;" >                                  
                                     <p:cellEditor>  
                                         <f:facet name="output">
                                             <h:outputText value="#{infoMvr.valor}">
@@ -141,7 +141,7 @@
                                     </f:facet>
                                 </p:column>
 
-                                <p:column headerText="Motivo" sortBy="#{infoMvr.motivo.nombre}" filterBy="#{infoMvr.motivo.nombre}" 
+                                <p:column style="font-size: 11px" headerText="Motivo" sortBy="#{infoMvr.motivo.nombre}" filterBy="#{infoMvr.motivo.nombre}" 
                                           filterMatchMode="contains" id="mvrMotivo" width="133" filterStyle="display: none; visibility: hidden" >                                  
                                     <p:cellEditor>  
                                         <f:facet name="output"><h:outputText value="#{infoMvr.motivo.nombre}"/></f:facet>  
@@ -158,7 +158,7 @@
                                     </f:facet>
                                 </p:column>
 
-                                <p:column headerText="Valor Anual" sortBy="#{infoMvr.valoranualoriginal}" filterBy="#{infoMvr.valoranualoriginal}" 
+                                <p:column style="font-size: 11px" headerText="Valor Anual" sortBy="#{infoMvr.valoranualoriginal}" filterBy="#{infoMvr.valoranualoriginal}" 
                                           filterMatchMode="contains" id="mvrValorAnual" width="133" filterStyle="display: none; visibility: hidden;" >                                  
                                     <p:cellEditor>  
                                         <f:facet name="output">
@@ -183,7 +183,7 @@
                         </fieldset>
 
                         <fieldset style="position: absolute;top: 320px;left: 10px;height: 160px;width: 830px; border-radius: 10px; text-align: left">
-                            <legend style="font-size: 10px; color: blue"><strong>Otros Certificados</strong></legend>
+                            <legend style="font-size: 12px; color: blue"><strong>Otros Certificados</strong></legend>
                             <p:dataTable id="datosOCEmpleado" var="info" rowKey="#{info.secuencia}" rowIndexVar="indiceOC" value="#{controlEmplMvr.listOtrosCertificadosEmpleado}" 
                                          filteredValue="#{controlEmplMvr.filtrarListOtrosCertificados}" editable="true" editMode="cell" rows="3" 
                                          scrollable="true" scrollHeight="71" scrollWidth="830" emptyMessage="No se encontrarón resultados para la búsqueda" style="font-size: 10px; border: 1px;width: 830px">
@@ -236,7 +236,7 @@
                                     </f:facet>
                                 </p:column>
 
-                                <p:column headerText="Valor" sortBy="#{info.valor}" filterBy="#{info.valor}" filterMatchMode="contains" 
+                                <p:column  headerText="Valor" sortBy="#{info.valor}" filterBy="#{info.valor}" filterMatchMode="contains" 
                                           id="ocValor" width="133"
                                           filterStyle="display: none; visibility: hidden;"  style="width: 90px; font-size: 11px">                                  
                                     <p:cellEditor>  
@@ -254,7 +254,7 @@
                                         </f:facet>  
                                     </p:cellEditor>
                                     <f:facet name="footer">
-                                        <h:outputText value="Valor" style="font-size: 9px"/>
+                                        <h:outputText value="Valor" />
                                     </f:facet>
                                 </p:column> 
 
@@ -271,7 +271,7 @@
                                         </f:facet>  
                                     </p:cellEditor>
                                     <f:facet name="footer">
-                                        <h:outputText value="Estado" style="font-size: 9px"/>
+                                        <h:outputText value="Estado" />
                                     </f:facet>
                                 </p:column> 
 
@@ -294,7 +294,7 @@
                                 </p:column>
 
 
-                                <p:column headerText="Dias" sortBy="#{info.diascontratados}" filterBy="#{info.diascontratados}" 
+                                <p:column  headerText="Dias" sortBy="#{info.diascontratados}" filterBy="#{info.diascontratados}" 
                                           filterMatchMode="contains" id="ocDias" width="90"
                                           filterStyle="display: none; visibility: hidden;"  style="width: 90px; font-size: 11px">                                  
                                     <p:cellEditor>  
@@ -307,7 +307,7 @@
                                         </f:facet>  
                                     </p:cellEditor>
                                     <f:facet name="footer">
-                                        <h:outputText value="Dias" style="font-size: 9px" />
+                                        <h:outputText value="Dias"  />
                                     </f:facet>
                                 </p:column> 
 
