--- a/DesignerRHN/DesignerRHN-war/web/EmplVacaPendiente.xhtml
+++ b/DesignerRHN/DesignerRHN-war/web/EmplVacaPendiente.xhtml
@@ -12,7 +12,7 @@
         <ui:composition template="/Template.xhtml">
             <ui:define name="body">                  
                 <h:form id="form"> 
-                    <p:panel  id="PanelTotal" header="Vacaciones" style="position: absolute;font-size: 12px;width: 874px; height: 545px;text-align: left" >  
+                    <p:panel  id="PanelTotal" header="Vacaciones" style="position: absolute;font-size: 13px;width: 874px; height: 545px;text-align: left" >  
 
                         <h:outputText style="position: absolute; left: 500px; top: 45px; width: 200px; height: 12px;position: absolute;color: red; font-weight: bold" id="nombreEmpleado" value="#{controlEmplVacaPendiente.empleado.persona.nombreCompleto}">
                         </h:outputText>
@@ -22,7 +22,7 @@
                         <p:inputText readonly="true" value="#{controlEmplVacaPendiente.diasProvisionados}" style="position: absolute; top: 50px;left: 740px;width: 50px;text-align: center"/>
 
                         <fieldset style="position: absolute; left: 10px; top:80px; font-size: 10px; width: 830px; height: 215px; border-radius: 10px; ">
-                            <legend style="font-size: 14px; color: blue"><strong>Vacaciones Pendientes</strong></legend>
+                            <legend style="font-size: 12px; color: blue"><strong>Vacaciones Pendientes</strong></legend>
                             <!-- TABLA EMPLVACACIONESEMPLEADO -->
 
                             <p:dataTable id="datosVacacionesPEmpleado" var="info" rowKey="#{info.secuencia}" rowIndexVar="indice" style="font-size: 10px; border: 1px; text-align: left;width: 820px"                           
@@ -36,7 +36,7 @@
 
                                     </p:commandButton>
                                 </p:column>
-                                <p:column headerText="Estado" style="padding: 0"  filterMatchMode="contains" id="vacacionesEstado" width="70" filterStyle="display: none; visibility: hidden;" >                                  
+                                <p:column headerText="Estado" style="padding: 0;font-size: 11px"  filterMatchMode="contains" id="vacacionesEstado" width="70" filterStyle="display: none; visibility: hidden;" >                                  
 
                                     <p:selectOneMenu id="editarEstado" value="#{info.estado}" style="width: 99%; font-weight: bold;text-transform: uppercase">  
                                         <f:selectItem itemLabel="CERRADO" itemValue="CERRADO" />  
@@ -49,7 +49,7 @@
                                     </f:facet>
                                 </p:column>
 
-                                <p:column headerText="DP" sortBy="#{info.diaspendientes}" filterBy="#{info.diaspendientes}" filterMatchMode="contains" id="vacacionesDP" width="50" filterStyle="display: none; visibility: hidden;" >                                  
+                                <p:column style="font-size: 11px" headerText="DP" sortBy="#{info.diaspendientes}" filterBy="#{info.diaspendientes}" filterMatchMode="contains" id="vacacionesDP" width="50" filterStyle="display: none; visibility: hidden;" >                                  
                                     <p:cellEditor>  
                                         <f:facet name="output"><h:outputText value="#{info.diaspendientes}"/></f:facet>  
                                         <f:facet name="input">
@@ -65,7 +65,7 @@
                                     </f:facet>
                                 </p:column>
 
-                                <p:column headerText="Fecha Inicial" sortBy="#{info.inicialcausacion}" filterBy="#{info.inicialcausacion}" filterMatchMode="contains"  width="112" id="vacacionesFechaInicial" filterStyle="display: none; visibility: hidden;"  >  
+                                <p:column style="font-size: 11px" headerText="Fecha Inicial" sortBy="#{info.inicialcausacion}" filterBy="#{info.inicialcausacion}" filterMatchMode="contains"  width="112" id="vacacionesFechaInicial" filterStyle="display: none; visibility: hidden;"  >  
                                     <p:cellEditor>  
                                         <f:facet name="output">
                                             <h:outputText value="#{info.inicialcausacion}">
@@ -87,7 +87,7 @@
                                     </f:facet>
                                 </p:column>
 
-                                <p:column headerText="Fecha Final" sortBy="#{info.finalcausacion}" filterBy="#{info.finalcausacion}"  filterMatchMode="contains"  width="113" id="vacacionesFechaFinal" filterStyle="display: none; visibility: hidden;"  >  
+                                <p:column style="font-size: 11px" headerText="Fecha Final" sortBy="#{info.finalcausacion}" filterBy="#{info.finalcausacion}"  filterMatchMode="contains"  width="113" id="vacacionesFechaFinal" filterStyle="display: none; visibility: hidden;"  >  
                                     <p:cellEditor>  
                                         <f:facet name="output">
                                             <h:outputText value="#{info.finalcausacion}" >
@@ -119,7 +119,7 @@
 
 
                         <fieldset style="position: absolute; left: 10px; top: 308px; font-size: 10px; width: 830px; height: 185px; border-radius: 10px; ">
-                            <legend style="font-size: 14px; color: blue"><strong>Vacaciones Disfrutados</strong></legend>
+                            <legend style="font-size: 12px; color: blue"><strong>Vacaciones Disfrutados</strong></legend>
                             <!-- TABLA EMPLVACACIONESEMPLEADO -->
 
                             <p:dataTable id="datosVacacionesDEmpleado" var="info2"  rowIndexVar="indice" style="font-size: 10px; border: 1px; text-align: left;width: 820px"                           
@@ -133,7 +133,7 @@
 
                                     </p:commandButton>
                                 </p:column>
-                                <p:column headerText="Estado" style="padding: 0" filterMatchMode="contains" id="vacacionesEstadoD" width="70" filterStyle="display: none; visibility: hidden;" >                                  
+                                <p:column headerText="Estado" style="padding: 0;font-size: 11px" filterMatchMode="contains" id="vacacionesEstadoD" width="70" filterStyle="display: none; visibility: hidden;" >                                  
                                     <p:selectOneMenu value="#{info2.estado}" id="editarEstadoD"  style="width: 99%; font-weight: bold;text-transform: uppercase "  panelStyle="width: 115px">  
                                         <f:selectItem itemLabel="CERRADO" itemValue="CERRADO" />  
                                         <f:selectItem itemLabel="CERRADO" itemValue="CERRADO" />  
@@ -145,7 +145,7 @@
                                     </f:facet>
                                 </p:column>
 
-                                <p:column headerText="DP" sortBy="#{info2.diaspendientes}" filterBy="#{info2.diaspendientes}"  filterMatchMode="contains" id="vacacionesDPD" width="50" filterStyle="display: none; visibility: hidden;" >                                  
+                                <p:column headerText="DP" style="font-size: 11px" sortBy="#{info2.diaspendientes}" filterBy="#{info2.diaspendientes}"  filterMatchMode="contains" id="vacacionesDPD" width="50" filterStyle="display: none; visibility: hidden;" >                                  
                                     <p:cellEditor>  
                                         <f:facet name="output"><h:outputText value="#{info2.diaspendientes}"/></f:facet>  
                                         <f:facet name="input">
@@ -161,7 +161,7 @@
                                     </f:facet>
                                 </p:column>
 
-                                <p:column headerText="Fecha Inicial" sortBy="#{info2.inicialcausacion}" filterBy="#{info2.inicialcausacion}"  filterMatchMode="contains"  width="112" id="vacacionesFechaInicialD" filterStyle="display: none; visibility: hidden;"  >  
+                                <p:column headerText="Fecha Inicial" style="font-size: 11px" sortBy="#{info2.inicialcausacion}" filterBy="#{info2.inicialcausacion}"  filterMatchMode="contains"  width="112" id="vacacionesFechaInicialD" filterStyle="display: none; visibility: hidden;"  >  
                                     <p:cellEditor>  
                                         <f:facet name="output">
                                             <h:outputText value="#{info2.inicialcausacion}" >
@@ -183,7 +183,7 @@
                                     </f:facet>
                                 </p:column>
 
-                                <p:column headerText="Fecha Final" sortBy="#{info2.finalcausacion}" filterBy="#{info2.finalcausacion}"  filterMatchMode="contains"  width="113" id="vacacionesFechaFinalD" filterStyle="display: none; visibility: hidden;"  >  
+                                <p:column headerText="Fecha Final" style="font-size: 11px" sortBy="#{info2.finalcausacion}" filterBy="#{info2.finalcausacion}"  filterMatchMode="contains"  width="113" id="vacacionesFechaFinalD" filterStyle="display: none; visibility: hidden;"  >  
                                     <p:cellEditor>  
                                         <f:facet name="output">
                                             <h:outputText value="#{info2.finalcausacion}" >
