--- a/DesignerRHN/DesignerRHN-war/web/EmplVigenciaAfiliacion3.xhtml
+++ b/DesignerRHN/DesignerRHN-war/web/EmplVigenciaAfiliacion3.xhtml
@@ -11,11 +11,11 @@
         <ui:composition template="/Template.xhtml">
             <ui:define name="body">                  
                 <h:form id="form"> 
-                    <p:panel  id="PanelTotal" header="Vigencias Afiliaciones" style=" font-size: 12px; position: absolute; width: 874px; height: 530px; text-align: left" >  
+                    <p:panel  id="PanelTotal" header="Vigencias Afiliaciones" style=" font-size: 13px; position: absolute; width: 874px; height: 510px; text-align: left" >  
                         <h:outputText style="position: absolute; top: 50px; height: 12px;position: absolute;color: red; font-weight: bold;text-align: right;width: 240px;left: 600px;" id="nombreEmpleado" value="#{controlEmplVigenciaAfiliacion3.empleado.persona.primerapellido} #{controlEmplVigenciaAfiliacion3.empleado.persona.segundoapellido} #{controlEmplVigenciaAfiliacion3.empleado.persona.nombre}">
                         </h:outputText>
 
-                        <p:toolbar style="font-size: 12px; position: absolute; top: 50px; left: 20px;">  
+                        <p:toolbar style="font-size: 12px;  position: absolute; top: 37px; left: 12px; height: 23px">  
                             <p:toolbarGroup align="left"> 
 
                                 <p:commandButton id="guardarRapido" value="" style="background-size: 100% 100%;background-image: url(Imagenes/guardar.jpg) ;background-repeat: no-repeat; width: 25px; height: 25px;" actionListener="#{controlEmplVigenciaAfiliacion3.guardadoGeneral()}" process="@this" />
@@ -61,11 +61,11 @@
                         </p:toolbar> 
 
 
-                        <fieldset style="position: absolute;top: 100px;left: 10px;height: 330px;width: 830px; border-radius: 10px; text-align: left">
-                            <legend style="font-size: 11px; color: blue"><strong>Afiliaciones Empleado</strong></legend>
+                        <fieldset style="position: absolute;top: 80px;left: 10px;height: 350px;width: 830px; border-radius: 10px; text-align: left">
+                            <legend style="font-size: 12px; color: blue"><strong>Afiliaciones Empleado</strong></legend>
                             <p:dataTable id="datosVAVigencia" var="info" rowKey="#{info.secuencia}" rowIndexVar="indiceVA" value="#{controlEmplVigenciaAfiliacion3.listVigenciasAfiliaciones}" 
-                                         filteredValue="#{controlEmplVigenciaAfiliacion3.filtrarVigenciasAfiliaciones}" editable="true" editMode="cell" rows="7" 
-                                         scrollable="true" scrollWidth="830" scrollHeight="180" emptyMessage="No se encontrarón resultados para la búsqueda" style="font-size: 10px; border: 1px;width: 830px"
+                                         filteredValue="#{controlEmplVigenciaAfiliacion3.filtrarVigenciasAfiliaciones}" editable="true" editMode="cell" rows="8" 
+                                         scrollable="true" scrollWidth="830" scrollHeight="200" emptyMessage="No se encontrarón resultados para la búsqueda" style="font-size: 10px; border: 1px;width: 830px"
                                          paginator="true"
                                          paginatorTemplate="{CurrentPageReport}  {FirstPageLink} {PreviousPageLink} {PageLinks} {NextPageLink} {LastPageLink} {RowsPerPageDropdown}">
 
@@ -88,7 +88,7 @@
                                         </f:facet>  
                                     </p:cellEditor>
                                     <f:facet name="footer">
-                                        <h:outputText value="Fecha Inicial" style="font-size: 9px" id="fooFechaInicialVA"/>
+                                        <h:outputText value="Fecha Inicial"  id="fooFechaInicialVA"/>
                                     </f:facet>
                                 </p:column>
 
@@ -111,7 +111,7 @@
                                         </f:facet>  
                                     </p:cellEditor>
                                     <f:facet name="footer">
-                                        <h:outputText value="Fecha Final" style="font-size: 9px" id="fooFechaFinalVA"/>
+                                        <h:outputText value="Fecha Final"  id="fooFechaFinalVA"/>
                                     </f:facet>
                                 </p:column>
 
@@ -128,7 +128,7 @@
                                         </f:facet>  
                                     </p:cellEditor>
                                     <f:facet name="footer">
-                                        <p:commandButton style="width: 100%; height: 16px; font-size: 9px; border: none; color: blue" id="fooTipoEntidadVA" value="Tipo Entidad"/>
+                                        <p:commandButton style="width: 100%; height: 16px; font-size: 11px; border: none; color: blue" id="fooTipoEntidadVA" value="Tipo Entidad"/>
                                     </f:facet>
                                 </p:column>
 
@@ -145,7 +145,7 @@
                                         </f:facet>  
                                     </p:cellEditor>
                                     <f:facet name="footer">
-                                        <p:commandButton style="width: 100%; height: 16px; font-size: 9px; border: none; color: blue" id="fooTerceroVA" value="Tercero"/>
+                                        <p:commandButton style="width: 100%; height: 16px; font-size: 11px; border: none; color: blue" id="fooTerceroVA" value="Tercero"/>
                                     </f:facet>
                                 </p:column>
 
@@ -161,7 +161,7 @@
                                         </f:facet>  
                                     </p:cellEditor>
                                     <f:facet name="footer">
-                                        <h:outputText style="width: 100%; height: 16px; font-size: 9px; border: none;" id="fooNITTerceroVA" value="NIT"/>
+                                        <h:outputText  id="fooNITTerceroVA" value="NIT"/>
                                     </f:facet>
                                 </p:column>
 
@@ -177,7 +177,7 @@
                                         </f:facet>  
                                     </p:cellEditor>
                                     <f:facet name="footer">
-                                        <h:outputText style="width: 100%; height: 16px; font-size: 9px; border: none;" id="fooCodigoVA" value="Codigo"/>
+                                        <h:outputText  id="fooCodigoVA" value="Codigo"/>
                                     </f:facet>
                                 </p:column>
 
@@ -194,7 +194,7 @@
                                         </f:facet>  
                                     </p:cellEditor>
                                     <f:facet name="footer">
-                                        <p:commandButton style="width: 100%; height: 16px; font-size: 9px; border: none; color: blue" id="fooEstadoAfiliacionVA" value="Estado Afiliacion"/>
+                                        <p:commandButton style="width: 100%; height: 16px; font-size: 11px; border: none; color: blue" id="fooEstadoAfiliacionVA" value="Estado Afiliacion"/>
                                     </f:facet>
                                 </p:column>
 
@@ -211,7 +211,7 @@
                                         </f:facet>  
                                     </p:cellEditor>
                                     <f:facet name="footer">
-                                        <h:outputText style="width: 100%; height: 16px; font-size: 9px; border: none;" id="fooObservacionesVA" value="Observaciones"/>
+                                        <h:outputText  id="fooObservacionesVA" value="Observaciones"/>
                                     </f:facet>
                                 </p:column>
                             </p:dataTable>
@@ -320,9 +320,9 @@
                             </p:commandButton>
                         </p:dialog>
 
-                        <p:commandButton style="position: absolute; left: 700px; top: 505px; font-size: 11px; font-family: Arial, Helvetica, sans-serif;" id="ACEPTAR" value="Aceptar" icon="ui-icon-check" onclick="confirmarGuardar.show();" update=":form:datosVAVigencia" process="@this" />
-                        <p:commandButton style="position: absolute; left: 20px; top: 505px; font-size: 11px; font-family: Arial, Helvetica, sans-serif;" id="REFRESCAR" value="Refrescar" icon="ui-icon-refresh" actionListener="#{controlEmplVigenciaAfiliacion3.cancelarModificacionVA()}" process="@this" />
-                        <p:commandButton style="position: absolute; left: 790px; top: 505px; font-size: 11px; font-family: Arial, Helvetica, sans-serif;" id="ATRAS" value="Atras" icon="ui-icon-arrowreturnthick-1-w" actionListener="#{controlEmplVigenciaAfiliacion3.salir()}" action="nomina" process="@this" />
+                        <p:commandButton style="position: absolute; left: 700px; top: 485px; font-size: 11px; font-family: Arial, Helvetica, sans-serif;" id="ACEPTAR" value="Aceptar" icon="ui-icon-check" onclick="confirmarGuardar.show();" update=":form:datosVAVigencia" process="@this" />
+                        <p:commandButton style="position: absolute; left: 20px; top: 485px; font-size: 11px; font-family: Arial, Helvetica, sans-serif;" id="REFRESCAR" value="Refrescar" icon="ui-icon-refresh" actionListener="#{controlEmplVigenciaAfiliacion3.cancelarModificacionVA()}" process="@this" />
+                        <p:commandButton style="position: absolute; left: 790px; top: 485px; font-size: 11px; font-family: Arial, Helvetica, sans-serif;" id="ATRAS" value="Atras" icon="ui-icon-arrowreturnthick-1-w" actionListener="#{controlEmplVigenciaAfiliacion3.salir()}" action="nomina" process="@this" />
 
                     </p:panel>
 
