--- a/DesignerRHN/DesignerRHN-war/web/EmplVigenciaSueldo.xhtml
+++ b/DesignerRHN/DesignerRHN-war/web/EmplVigenciaSueldo.xhtml
@@ -11,7 +11,7 @@
         <ui:composition template="/Template.xhtml">
             <ui:define name="body">                  
                 <h:form id="form"> 
-                    <p:panel  id="PanelTotal" header="Históricos de Sueldos" style=" font-size: 12px; position: absolute; width: 874px; height: 540px; text-align: left" >  
+                    <p:panel  id="PanelTotal" header="Históricos de Sueldos" style=" font-size: 13px; position: absolute; width: 874px; height: 540px; text-align: left" >  
                         <h:outputText style="position: absolute; top: 50px; height: 12px;position: absolute;color: red;font-weight: bold;text-align: right;width: 240px;left: 600px;" id="nombreEmpleado" value="#{controlVigenciaSueldo.empleado.persona.primerapellido} #{controlVigenciaSueldo.empleado.persona.segundoapellido} #{controlVigenciaSueldo.empleado.persona.nombre}">
                         </h:outputText>
                         <h:outputText id="totalConsultarActual" value="Total $ " style="position: absolute; top: 75px;left: 500px; visibility: #{controlVigenciaSueldo.visibilidadTotal()};" >
@@ -20,7 +20,7 @@
                             <f:convertNumber type="number" />
                         </h:outputText>
 
-                        <p:toolbar style="font-size: 12px; position: absolute; top: 50px; left: 20px;">  
+                        <p:toolbar style="font-size: 12px; position: absolute; top: 37px; left: 12px; height: 23px">  
                             <p:toolbarGroup align="left"> 
 
                                 <p:commandButton id="guardarRapido" value="" style="background-size: 100% 100%;background-image: url(Imagenes/guardar.jpg) ;background-repeat: no-repeat; width: 25px; height: 25px;" actionListener="#{controlVigenciaSueldo.guardadoGeneral()}" process="@this" />
@@ -67,7 +67,7 @@
                         </p:toolbar> 
 
                         <fieldset style="position: absolute; left: 10px; top: 90px; font-size: 10px; width: 830px; height: 210px; border-radius: 10px; text-align: left">
-                            <legend style="font-size: 14px; color: blue"><strong>Sueldo del Empleado</strong></legend>
+                            <legend style="font-size: 12px; color: blue"><strong>Sueldo del Empleado</strong></legend>
                             <!-- TABLA EMPLVIGENCIALOCALIZACION -->
 
                             <p:dataTable id="datosVSEmpleado" var="infoDVS" rowKey="#{infoDVS.secuencia}" rowIndexVar="indice" style="font-size: 10px; border: 1px;"   
@@ -78,7 +78,7 @@
 
                                 <p:ajax event="filter" listener="#{controlVigenciaSueldo.eventoFiltrar()}"/>
 
-                                <p:column headerText="Fecha" sortBy="#{infoDVS.fechavigencia}" filterBy="#{infoDVS.fechavigencia}" filterMatchMode="contains"  width="72" id="vSFechaVigencia" filterStyle="display: none; visibility: hidden;"  >  
+                                <p:column style="font-size: 11px" headerText="Fecha" sortBy="#{infoDVS.fechavigencia}" filterBy="#{infoDVS.fechavigencia}" filterMatchMode="contains"  width="72" id="vSFechaVigencia" filterStyle="display: none; visibility: hidden;"  >  
                                     <p:cellEditor>  
                                         <f:facet name="output">
                                             <h:outputText value="#{infoDVS.fechavigencia}" >
@@ -101,7 +101,7 @@
                                     </f:facet>
                                 </p:column>
 
-                                <p:column headerText="Motivo Cambio Sueldo" sortBy="#{infoDVS.motivocambiosueldo.nombre}" filterBy="#{infoDVS.motivocambiosueldo.nombre}" 
+                                <p:column style="font-size: 11px" headerText="Motivo Cambio Sueldo" sortBy="#{infoDVS.motivocambiosueldo.nombre}" filterBy="#{infoDVS.motivocambiosueldo.nombre}" 
                                           filterMatchMode="contains" id="vSMotivoCambioSueldo" width="133" filterStyle="display: none; visibility: hidden" >                                  
                                     <p:cellEditor>  
                                         <f:facet name="output"><h:outputText value="#{infoDVS.motivocambiosueldo.nombre}"/></f:facet>  
@@ -118,7 +118,7 @@
                                     </f:facet>
                                 </p:column>
 
-                                <p:column headerText="Tipo Sueldo" sortBy="#{infoDVS.tiposueldo.descripcion}" filterBy="#{infoDVS.tiposueldo.descripcion}" filterMatchMode="contains" 
+                                <p:column style="font-size: 11px" headerText="Tipo Sueldo" sortBy="#{infoDVS.tiposueldo.descripcion}" filterBy="#{infoDVS.tiposueldo.descripcion}" filterMatchMode="contains" 
                                           id="vSTipoSueldo" width="133" filterStyle="display: none; visibility: hidden" >                                  
                                     <p:cellEditor>  
                                         <f:facet name="output"><h:outputText value="#{infoDVS.tiposueldo.descripcion}"/></f:facet>  
@@ -131,11 +131,11 @@
                                         </f:facet>  
                                     </p:cellEditor>
                                     <f:facet name="footer">
-                                        <p:commandButton style="width: 100%; height: 16px; font-size: 9px; border: none; color: blue" id="fooTipoSueldo" value="Tipo Sueldo"/>
+                                        <p:commandButton style="width: 100%; height: 16px; font-size: 11px; border: none; color: blue" id="fooTipoSueldo" value="Tipo Sueldo"/>
                                     </f:facet>
                                 </p:column>
 
-                                <p:column headerText="..." id="vSRetroactivo" width="15" sortBy="#{infoDVS.retroactivo}" filterBy="#{infoDVS.retroactivo}" filterMatchMode="contains" filterStyle="display: none; visibility: hidden;">                                  
+                                <p:column style="font-size: 11px" headerText="..." id="vSRetroactivo" width="15" sortBy="#{infoDVS.retroactivo}" filterBy="#{infoDVS.retroactivo}" filterMatchMode="contains" filterStyle="display: none; visibility: hidden;">                                  
                                     <p:selectBooleanCheckbox id="editarRetroactivo" style="alignment-adjust: central;" value="#{infoDVS.checkRetroactivo}">
                                         <p:ajax event="change" listener="#{controlVigenciaSueldo.modificarVS(indice)}" process="@this"/>
                                     </p:selectBooleanCheckbox>  
@@ -144,7 +144,7 @@
                                     </f:facet>
                                 </p:column>
 
-                                <p:column headerText="Vigencia del Retroactivo" sortBy="#{infoDVS.fechavigenciaretroactivo}" filterBy="#{infoDVS.fechavigenciaretroactivo}" filterMatchMode="contains" id="vSVigenciaRetroactivo" width="133" filterStyle="display: none; visibility: hidden;" >                                  
+                                <p:column style="font-size: 11px" headerText="Vigencia del Retroactivo" sortBy="#{infoDVS.fechavigenciaretroactivo}" filterBy="#{infoDVS.fechavigenciaretroactivo}" filterMatchMode="contains" id="vSVigenciaRetroactivo" width="133" filterStyle="display: none; visibility: hidden;" >                                  
                                     <p:cellEditor>  
                                         <f:facet name="output">
                                             <h:outputText value="#{infoDVS.fechavigenciaretroactivo}">
@@ -167,7 +167,7 @@
                                     </f:facet>
                                 </p:column>
 
-                                <p:column headerText="Valor" sortBy="#{infoDVS.valor}" filterBy="#{infoDVS.valor}" filterMatchMode="contains" id="vSValor" width="133" filterStyle="display: none; visibility: hidden;" >                                  
+                                <p:column style="font-size: 11px" headerText="Valor" sortBy="#{infoDVS.valor}" filterBy="#{infoDVS.valor}" filterMatchMode="contains" id="vSValor" width="133" filterStyle="display: none; visibility: hidden;" >                                  
                                     <p:cellEditor>  
                                         <f:facet name="output">
                                             <h:outputText value="#{infoDVS.valor}">
@@ -185,7 +185,7 @@
                                     </f:facet>
                                 </p:column>
 
-                                <p:column headerText="Observaciones" sortBy="#{infoDVS.observaciones}" filterBy="#{infoDVS.observaciones}" filterMatchMode="contains" id="vSObservaciones" width="133" filterStyle="display: none; visibility: hidden;" >                                  
+                                <p:column style="font-size: 11px" headerText="Observaciones" sortBy="#{infoDVS.observaciones}" filterBy="#{infoDVS.observaciones}" filterMatchMode="contains" id="vSObservaciones" width="133" filterStyle="display: none; visibility: hidden;" >                                  
                                     <p:cellEditor>  
                                         <f:facet name="output">
                                             <h:outputText value="#{infoDVS.observaciones}"/>
@@ -229,7 +229,7 @@
                                         </f:facet>  
                                     </p:cellEditor>
                                     <f:facet name="footer">
-                                        <h:outputText value="Fecha Inicial" style="font-size: 9px" id="fooFechaInicialVA"/>
+                                        <h:outputText value="Fecha Inicial"  id="fooFechaInicialVA"/>
                                     </f:facet>
                                 </p:column>
 
@@ -252,7 +252,7 @@
                                         </f:facet>  
                                     </p:cellEditor>
                                     <f:facet name="footer">
-                                        <h:outputText value="Fecha Final" style="font-size: 9px" id="fooFechaFinalVA"/>
+                                        <h:outputText value="Fecha Final"  id="fooFechaFinalVA"/>
                                     </f:facet>
                                 </p:column>
 
@@ -269,7 +269,7 @@
                                         </f:facet>  
                                     </p:cellEditor>
                                     <f:facet name="footer">
-                                        <p:commandButton style="width: 100%; height: 16px; font-size: 9px; border: none; color: blue" id="fooTerceroVA" value="Tercero"/>
+                                        <p:commandButton style="width: 100%; height: 16px; font-size: 11px; border: none; color: blue" id="fooTerceroVA" value="Tercero"/>
                                     </f:facet>
                                 </p:column>
 
@@ -286,7 +286,7 @@
                                         </f:facet>  
                                     </p:cellEditor>
                                     <f:facet name="footer">
-                                        <p:commandButton style="width: 100%; height: 16px; font-size: 9px; border: none; color: blue" id="fooTipoEntidadVA" value="Tipo Entidad"/>
+                                        <p:commandButton style="width: 100%; height: 16px; font-size: 11px; border: none; color: blue" id="fooTipoEntidadVA" value="Tipo Entidad"/>
                                     </f:facet>
                                 </p:column>
 
@@ -302,7 +302,7 @@
                                         </f:facet>  
                                     </p:cellEditor>
                                     <f:facet name="footer">
-                                        <h:outputText value="Valor" style="font-size: 9px" id="fooValorVA"/>
+                                        <h:outputText value="Valor"  id="fooValorVA"/>
                                     </f:facet>
                                 </p:column> 
 
@@ -453,7 +453,7 @@
                         </p:dialog>
 
                         <p:commandButton style="position: absolute; left: 700px; top: 505px; font-size: 11px; font-family: Arial, Helvetica, sans-serif;" id="ACEPTAR" value="Aceptar" icon="ui-icon-check" onclick="confirmarGuardar.show();" update=":form:datosVSEmpleado" process="@this" />
-                        <p:commandButton style="position: absolute; left: 530px; top: 505px; font-size: 11px; font-family: Arial, Helvetica, sans-serif;" id="REFRESCAR" value="Refrescar" icon="ui-icon-refresh" actionListener="#{controlVigenciaSueldo.cancelarModificacion()}" process="@this" />
+                        <p:commandButton style="position: absolute; left: 360px; top: 505px; font-size: 11px; font-family: Arial, Helvetica, sans-serif;" id="REFRESCAR" value="Refrescar" icon="ui-icon-refresh" actionListener="#{controlVigenciaSueldo.cancelarModificacion()}" process="@this" />
                         <p:commandButton style="position: absolute; left: 790px; top: 505px; font-size: 11px; font-family: Arial, Helvetica, sans-serif;" id="ATRAS" value="Atras" icon="ui-icon-arrowreturnthick-1-w" actionListener="#{controlVigenciaSueldo.salir()}" action="nomina" process="@this" />
 
                     </p:panel>
