--- a/DesignerRHN/DesignerRHN-war/web/EmplVigenciaTipoTrabajador.xhtml
+++ b/DesignerRHN/DesignerRHN-war/web/EmplVigenciaTipoTrabajador.xhtml
@@ -12,11 +12,11 @@
         <ui:composition template="/Template.xhtml">
             <ui:define name="body">                  
                 <h:form id="form"> 
-                    <p:panel  id="PanelTotal" header="Historia Tipo Trabajador" style=" font-size: 12px; position: absolute; width: 874px; height: 545px;  text-align: left" >  
+                    <p:panel  id="PanelTotal" header="Historia Tipo Trabajador" style=" font-size: 13px; position: absolute; width: 874px; height: 543px;  text-align: left" >  
 
                         <h:outputText style="position: absolute; top: 50px; height: 12px;position: absolute;color: red; font-weight: bold;text-align: right;width: 240px;left: 600px; "  id="nombreEmpleado" value="#{controlVigenciaTipoTrabajador.empleado.persona.primerapellido} #{controlVigenciaTipoTrabajador.empleado.persona.segundoapellido} #{controlVigenciaTipoTrabajador.empleado.persona.nombre}"/>  
 
-                        <p:toolbar style="font-size: 12px; position: absolute; top: 40px; left: 20px;">  
+                        <p:toolbar style="font-size: 12px; position: absolute; top: 37px; left: 12px; height: 23px">  
                             <p:toolbarGroup align="left"> 
 
                                 <p:commandButton id="guardarRapido" value="" style="background-image: url(Imagenes/guardar.jpg); background-size: 100% 100%; background-repeat: no-repeat; width: 25px; height: 25px; " actionListener="#{controlVigenciaTipoTrabajador.guardarGeneral()}" process="@this" />
@@ -62,7 +62,7 @@
                         </p:toolbar> 
 
                         <fieldset style="position: absolute; left: 10px; top: 90px; font-size: 10px; width: 820px; height: 195px; border-radius: 10px; ">
-                            <legend style="font-size: 14px; color: blue"><strong>Tipo de Trabajador</strong></legend>
+                            <legend style="font-size: 12px; color: blue"><strong>Tipo de Trabajador</strong></legend>
                             <!-- TABLA EMPLVIGENCIATIPOTRABAJADOR -->
 
                             <p:dataTable id="datosVTTEmpleado" var="info" rowKey="#{info.secuencia}" rowIndexVar="indice" style="font-size: 10px; border: 1px; text-align: left;width: 820px"                           
@@ -73,7 +73,7 @@
 
                                 <p:ajax event="filter" listener="#{controlVigenciaTipoTrabajador.eventoFiltrar()}"/>
 
-                                <p:column headerText="Fecha" sortBy="#{info.fechavigencia}" filterBy="#{info.fechavigencia}" filterMatchMode="contains"  width="72" id="vttFecha" filterStyle="display: none; visibility: hidden;"  >  
+                                <p:column style="font-size: 11px" headerText="Fecha" sortBy="#{info.fechavigencia}" filterBy="#{info.fechavigencia}" filterMatchMode="contains"  width="72" id="vttFecha" filterStyle="display: none; visibility: hidden;"  >  
                                     <p:cellEditor>  
                                         <f:facet name="output">
                                             <h:outputText value="#{info.fechavigencia}" >
@@ -96,7 +96,7 @@
                                     </f:facet>
                                 </p:column>
 
-                                <p:column headerText="Tipo Trabajador" sortBy="#{info.tipotrabajador.nombre}" filterBy="#{info.tipotrabajador.nombre}" filterMatchMode="contains" id="vttTipoTrabajador" width="133" filterStyle="display: none; visibility: hidden;" >                                  
+                                <p:column style="font-size: 11px" headerText="Tipo Trabajador" sortBy="#{info.tipotrabajador.nombre}" filterBy="#{info.tipotrabajador.nombre}" filterMatchMode="contains" id="vttTipoTrabajador" width="133" filterStyle="display: none; visibility: hidden;" >                                  
                                     <p:cellEditor>  
                                         <f:facet name="output"><h:outputText value="#{info.tipotrabajador.nombre}" /></f:facet>  
                                         <f:facet name="input">
@@ -109,11 +109,11 @@
                                     </p:cellEditor>
 
                                     <f:facet name="footer">
-                                        <p:commandButton style="width: 100%; height: 16px; font-size: 9px; border: none; color: blue" id="fooTipoTrabajador" value="Tipo Trabajador"/>
+                                        <p:commandButton style="width: 100%; height: 16px; border: none; color: blue" id="fooTipoTrabajador" value="Tipo Trabajador"/>
                                     </f:facet>
                                 </p:column>
 
-                                <p:column headerText="Tipo Cotizante" sortBy="#{info.tipotrabajador.tipocotizante.descripcion}" filterBy="#{info.tipotrabajador.tipocotizante.descripcion}" filterMatchMode="contains" id="vttTipoCotizante" width="133" filterStyle="display: none; visibility: hidden;" >                                  
+                                <p:column style="font-size: 11px" headerText="Tipo Cotizante" sortBy="#{info.tipotrabajador.tipocotizante.descripcion}" filterBy="#{info.tipotrabajador.tipocotizante.descripcion}" filterMatchMode="contains" id="vttTipoCotizante" width="133" filterStyle="display: none; visibility: hidden;" >                                  
                                     <p:cellEditor>  
                                         <f:facet name="output"><h:outputText value="#{info.tipotrabajador.tipocotizante.descripcion}" /></f:facet>  
                                         <f:facet name="input">
@@ -124,15 +124,15 @@
                                     </p:cellEditor>
 
                                     <f:facet name="footer">
-                                        <p:commandButton style="width: 100%; height: 16px; font-size: 9px; border: none; color: blue" id="fooTipoCotizante" value="Tipo Cotizante"/>
+                                        <p:commandButton style="width: 100%; height: 16px; border: none; color: blue" id="fooTipoCotizante" value="Tipo Cotizante"/>
                                     </f:facet>
                                 </p:column> 
                             </p:dataTable>  
                         </fieldset>
-                        <p:panel id="panelPensionadosMensaje" header="Información Adicional Para Pensionados" style="position: absolute; left: 12px; top: 310px; font-size: 10px; width: 410px; height: 228px; border-radius: 10px; text-align: left; visibility: visible">
+                        <p:panel id="panelPensionadosMensaje" header="Información Adicional Para Pensionados" style="position: absolute; left: 12px; top: 310px; font-size: 12px; width: 410px; height: 228px; border-radius: 10px; text-align: left; visibility: visible">
                             <h:outputText value="Este bloque se habilita cuando el Tipo Trabajador es un Pensionado; en el cual podra ver información como: fecha inicio, fecha final, porcentage de la pensión, nombre de quien sustituye pensión, nombre del tutor, resolución pensión o sustitución" style="font-size: 12px;"/>
                         </p:panel>
-                        <p:panel id="panelPensionadosInput" header="Información Adicional Para Pensionados" style="position: absolute; left: 12px; top: 310px; font-size: 10px; width: 410px; height: 228px; border-radius: 10px; text-align: left; visibility: hidden;" >
+                        <p:panel id="panelPensionadosInput" header="Información Adicional Para Pensionados" style="position: absolute; left: 12px; top: 310px; font-size: 12px; width: 410px; height: 228px; border-radius: 10px; text-align: left; visibility: hidden;" >
                             <h:outputText value="Fecha Inicio" style="font-size: 11px;position: absolute; left: 40px; top: 25px"/>
                             <p:calendar  id="fechaPensionInicio" value="#{controlVigenciaTipoTrabajador.pensionVigencia.fechainiciopension}" style="font-size: 11px; position: absolute; left: 40px; top: 40px;"   styleClass="ui-datepicker, myClass2"  
                                          navigator="true" showButtonPanel="true" locale="es" pattern="dd/MM/yyyy">
@@ -185,10 +185,10 @@
                             <p:commandButton value="Limpiar" id="LimpiarPensionados" style="font-size: 10px;position: absolute; left: 306px; top: 200px; width: 55px; height: 23px" actionListener="#{controlVigenciaTipoTrabajador.limpiarPension()}" process="@this"/>
                         </p:panel>
 
-                        <p:panel id="panelRetiradosMensaje" header="Información Adicional Para Retirado" style="position: absolute; left: 440px; top: 310px; font-size: 10px; width: 405px; height: 200px; border-radius: 10px; text-align: left; visibility: visible">
+                        <p:panel id="panelRetiradosMensaje" header="Información Adicional Para Retirado" style="position: absolute; left: 440px; top: 310px; font-size: 12px; width: 405px; height: 200px; border-radius: 10px; text-align: left; visibility: visible">
                             <h:outputText value="Este bloque se habilita cuando el Tipo Trabajador es un Retirado; en el cual podra ver informacion como: fecha del Retiro, motivo del Retiro y las observaciones correspondientes" style="font-size: 12px;"/>
                         </p:panel>
-                        <p:panel id="panelRetiradosInput" header="Información Adicional Para Retirado" style="position: absolute; left: 440px; top: 310px; font-size: 10px; width: 405px; height: 200px; border-radius: 10px; text-align: left; visibility: hidden">
+                        <p:panel id="panelRetiradosInput" header="Información Adicional Para Retirado" style="position: absolute; left: 440px; top: 310px; font-size: 12px; width: 405px; height: 200px; border-radius: 10px; text-align: left; visibility: hidden">
                             <h:outputText value="Fecha Retiro" style="font-size: 12px;position: absolute; left: 25px; top: 40px"/>
                             <p:calendar  id="fechaRetiro" value="#{controlVigenciaTipoTrabajador.retiroVigencia.fecharetiro}" style="font-size: 10px; position: absolute; left: 125px; top: 40px"   styleClass="ui-datepicker, myClass2"  
                                          navigator="true" showButtonPanel="true" locale="es" pattern="dd/MM/yyyy">
