--- a/DesignerRHN/DesignerRHN-war/web/IdiomaPersona.xhtml
+++ b/DesignerRHN/DesignerRHN-war/web/IdiomaPersona.xhtml
@@ -12,21 +12,21 @@
         <ui:composition template="/Template.xhtml">
             <ui:define name="body">                  
                 <h:form id="form"> 
-                    <p:panel  id="PanelTotal" header="História Idiomas" style=" font-size: 12px; position: absolute; width: 874px; height: 530px; text-align: left" >  
+                    <p:panel  id="PanelTotal" header="História Idiomas" style=" font-size: 13px; position: absolute; width: 874px; height: 510px; text-align: left" >  
 
-                        <p:commandButton style="position: absolute; left: 700px; top: 490px; font-size: 11px; font-family: Arial, Helvetica, sans-serif;" id="ACEPTAR" icon="ui-icon-check" value="Aceptar" onclick="confirmarGuardar.show();" update=":form:datosIdiomas" process="@this" />
-                        <p:commandButton style="position: absolute; left: 30px; top: 490px; font-size: 11px; font-family: Arial, Helvetica, sans-serif;" id="REFRESCAR" value="Refrescar" icon="ui-icon-refresh" actionListener="#{controlIdiomaPersona.cancelarModificacion()}" process="@this" />
-                        <p:commandButton style="position: absolute; left: 796px; top: 490px; font-size: 11px; font-family: Arial, Helvetica, sans-serif;" id="ATRAS" value="Atras" icon="ui-icon-arrowreturnthick-1-w" actionListener="#{controlIdiomaPersona.salir()}" action="nomina" process="@this" />
+                        <p:commandButton style="position: absolute; left: 710px; top: 450px; font-size: 11px; font-family: Arial, Helvetica, sans-serif;" id="ACEPTAR" icon="ui-icon-check" value="Aceptar" onclick="confirmarGuardar.show();" update=":form:datosIdiomas" process="@this" />
+                        <p:commandButton style="position: absolute; left: 20px; top: 450px; font-size: 11px; font-family: Arial, Helvetica, sans-serif;" id="REFRESCAR" value="Refrescar" icon="ui-icon-refresh" actionListener="#{controlIdiomaPersona.cancelarModificacion()}" process="@this" />
+                        <p:commandButton style="position: absolute; left: 796px; top: 450px; font-size: 11px; font-family: Arial, Helvetica, sans-serif;" id="ATRAS" value="Atras" icon="ui-icon-arrowreturnthick-1-w" actionListener="#{controlIdiomaPersona.salir()}" action="nomina" process="@this" />
 
 
-                        <fieldset style="position: absolute; left: 10px; top: 110px; font-size: 10px; width: 830px; height: 295px; border-radius: 10px; ">
-                            <legend style="font-size: 14px; color: blue;text-align:left"><strong>Idiomas del Empleado</strong></legend>
+                        <fieldset style="position: absolute; left: 10px; top: 80px; font-size: 10px; width: 830px; height: 335px; border-radius: 10px; ">
+                            <legend style="font-size: 12px; color: blue;text-align:left"><strong>Idiomas del Empleado</strong></legend>
                             <!-- TABLA EMPLVIGENCIAREFORMALABORAL -->
 
                             <p:dataTable id="datosIdiomas" var="info" rowKey="#{info.secuencia}" rowIndexVar="indice" style="font-size: 10px; border: 1px; text-align: left"                           
-                                         value="#{controlIdiomaPersona.listIdiomasPersonas}" scrollable="true" scrollHeight="150" 
+                                         value="#{controlIdiomaPersona.listIdiomasPersonas}" scrollable="true" scrollHeight="190" 
                                          filteredValue="#{controlIdiomaPersona.filtrarListIdiomasPersonas}" emptyMessage="No se encontrarón resultados para la búsqueda"
-                                         editable="true" editMode="cell" paginator="true" rows="6"  
+                                         editable="true" editMode="cell" paginator="true" rows="8"  
                                          paginatorTemplate="{CurrentPageReport}  {FirstPageLink} {PreviousPageLink} {PageLinks} {NextPageLink} {LastPageLink} {RowsPerPageDropdown}">
 
                                 <p:ajax event="filter" listener="#{controlIdiomaPersona.eventoFiltrar()}"/>
@@ -61,7 +61,7 @@
                                         </f:facet>  
                                     </p:cellEditor>
                                     <f:facet name="footer">
-                                        <h:outputText style="width: 100%; height: 16px; font-size: 9px; border: none;" id="fooConversacion" value="Conversacion"/>
+                                        <h:outputText  id="fooConversacion" value="Conversacion"/>
                                     </f:facet>
                                 </p:column>
 
@@ -77,7 +77,7 @@
                                         </f:facet>  
                                     </p:cellEditor>
                                     <f:facet name="footer">
-                                        <h:outputText style="width: 100%; height: 16px; font-size: 9px; border: none;" id="fooLectura" value="Lectura"/>
+                                        <h:outputText id="fooLectura" value="Lectura"/>
                                     </f:facet>
                                 </p:column>
 
@@ -93,14 +93,14 @@
                                         </f:facet>  
                                     </p:cellEditor>
                                     <f:facet name="footer">
-                                        <h:outputText style="width: 100%; height: 16px; font-size: 9px; border: none;" id="fooEscritura" value="Escritura"/>
+                                        <h:outputText  id="fooEscritura" value="Escritura"/>
                                     </f:facet>
                                 </p:column>
 
                             </p:dataTable>  
                         </fieldset> 
 
-                        <p:toolbar style="font-size: 12px; position: absolute; top: 50px; left: 20px;">  
+                        <p:toolbar style="font-size: 12px; position: absolute; top: 37px; left: 12px; height: 23px">  
                             <p:toolbarGroup align="left"> 
 
                                 <p:commandButton id="guardarRapido" value="" style="background-image: url(Imagenes/guardar.jpg); background-size: 100% 100%; background-repeat: no-repeat; width: 25px; height: 25px; " actionListener="#{controlIdiomaPersona.guardarCambios()}" process="@this" />
