--- a/DesignerRHN/DesignerRHN-war/web/Proyecto.xhtml
+++ b/DesignerRHN/DesignerRHN-war/web/Proyecto.xhtml
@@ -11,9 +11,9 @@
         <ui:composition template="/Template.xhtml">
             <ui:define name="body">                  
                 <h:form id="form"> 
-                    <p:panel  id="PanelTotal" header="Proyectos" style=" font-size: 12px; position: absolute; width: 874px; height: 530px; text-align: left" >  
+                    <p:panel  id="PanelTotal" header="Proyectos" style=" font-size: 13px; position: absolute; width: 874px; height: 515px; text-align: left" >  
 
-                        <p:toolbar style="font-size: 12px; position: absolute; top: 50px; left: 20px;">  
+                        <p:toolbar style="font-size: 12px; position: absolute; top: 37px; left: 12px; height: 23px">  
                             <p:toolbarGroup align="left"> 
 
                                 <p:commandButton id="guardarRapido" value="" style="background-size: 100% 100%;background-image: url(Imagenes/guardar.jpg) ;background-repeat: no-repeat; width: 25px; height: 25px;" actionListener="#{controlProyecto.guardadoGeneral()}" process="@this" />
@@ -59,8 +59,8 @@
                         </p:toolbar> 
 
 
-                        <fieldset style="position: absolute;top: 100px;left: 10px;height: 330px;width: 830px; border-radius: 10px; text-align: left">
-                            <legend style="font-size: 11px; color: blue"><strong>Proyectos</strong></legend>
+                        <fieldset style="position: absolute;top: 80px;left: 10px;height: 330px;width: 830px; border-radius: 10px; text-align: left">
+                            <legend style="font-size: 12px; color: blue"><strong>Proyectos</strong></legend>
                             <p:dataTable id="datosProyectos" var="info" rowKey="#{info.secuencia}" rowIndexVar="indiceP" value="#{controlProyecto.listProyectos}" 
                                          filteredValue="#{controlProyecto.filtrarListProyectos}" editable="true" editMode="cell" rows="7" 
                                          scrollable="true" scrollWidth="830" scrollHeight="180" emptyMessage="No se encontrarón resultados para la búsqueda" style="font-size: 10px; border: 1px;width: 830px"
@@ -443,11 +443,11 @@
                         </p:dialog>
 
                         
-                        <p:commandButton style="position: absolute;left: 20px;top: 450px; font-size: 11px; font-family: Arial, Helvetica, sans-serif;" id="BUSCARPROYECTO" process="@this" value="Buscar Proyecto" actionListener="#{controlProyecto.dialogoProyecto()}"/> 
-                        <p:commandButton style="position: absolute;left: 150px;top: 450px; font-size: 11px; font-family: Arial, Helvetica, sans-serif;" id="MOSTRARTODOS" process="@this" value="Mostrar Todos" actionListener="#{controlProyecto.mostrarTodos()}" update=":form:datosProyectos"/>
-                        <p:commandButton style="position: absolute; left: 700px; top: 505px; font-size: 11px; font-family: Arial, Helvetica, sans-serif;" id="ACEPTAR" value="Aceptar" icon="ui-icon-check" onclick="confirmarGuardar.show();" update=":form:datosProyectos" process="@this" />
-                        <p:commandButton style="position: absolute; left: 20px; top: 505px; font-size: 11px; font-family: Arial, Helvetica, sans-serif;" id="REFRESCAR" value="Refrescar" icon="ui-icon-refresh" actionListener="#{controlProyecto.cancelarModificacionP()}" process="@this" />
-                        <p:commandButton style="position: absolute; left: 790px; top: 505px; font-size: 11px; font-family: Arial, Helvetica, sans-serif;" id="ATRAS" value="Atras" icon="ui-icon-arrowreturnthick-1-w" actionListener="#{controlProyecto.salir()}" action="proyects" process="@this" />
+                        <p:commandButton style="position: absolute;left: 20px;top: 430px; font-size: 11px; font-family: Arial, Helvetica, sans-serif;" id="BUSCARPROYECTO" process="@this" value="Buscar Proyecto" actionListener="#{controlProyecto.dialogoProyecto()}"/> 
+                        <p:commandButton style="position: absolute;left: 150px;top: 430px; font-size: 11px; font-family: Arial, Helvetica, sans-serif;" id="MOSTRARTODOS" process="@this" value="Mostrar Todos" actionListener="#{controlProyecto.mostrarTodos()}" update=":form:datosProyectos"/>
+                        <p:commandButton style="position: absolute; left: 710px; top: 475px; font-size: 11px; font-family: Arial, Helvetica, sans-serif;" id="ACEPTAR" value="Aceptar" icon="ui-icon-check" onclick="confirmarGuardar.show();" update=":form:datosProyectos" process="@this" />
+                        <p:commandButton style="position: absolute; left: 20px; top: 475px; font-size: 11px; font-family: Arial, Helvetica, sans-serif;" id="REFRESCAR" value="Refrescar" icon="ui-icon-refresh" actionListener="#{controlProyecto.cancelarModificacionP()}" process="@this" />
+                        <p:commandButton style="position: absolute; left: 796px; top: 475px; font-size: 11px; font-family: Arial, Helvetica, sans-serif;" id="ATRAS" value="Atras" icon="ui-icon-arrowreturnthick-1-w" actionListener="#{controlProyecto.salir()}" action="proyects" process="@this" />
 
                     </p:panel>
 
